--- a/secrets/kustomization.yaml
+++ b/secrets/kustomization.yaml
@@ -4,6 +4,6 @@ namespace: default
 secretGenerator:
   - name: prod-secrets-env
     envs:
-    - secrets/prod-secrets-env.env
+    - prod-secrets-env.env
     options:
       disableNameSuffixHash: true
