--- a/clusters/default/security/sync.yaml
+++ b/clusters/default/security/sync.yaml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: secrets
+  name: security-sync
   namespace: flux-system
 spec:
   targetNamespace: default
   interval: 1m0s
-  path: ./secrets
+  path: ./security/sops-kms-env
   prune: true
   wait: true
   sourceRef:
