--- a/security/sops-kms-env/kustomization.yaml
+++ b/security/sops-kms-env/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 secretGenerator:
-  - name: prod-secrets-env
+  - name: env-prod-secrets
     envs:
     - secrets/env-prod-secrets.env
     options:
