--- a/clusters/default/security/sync.yaml
+++ b/clusters/default/security/sync.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   targetNamespace: webapi6
   interval: 1m0s
-  path: ./security/sops-kms-emv
+  path: ./security/sops-kms-env
   prune: true
   wait: true
   sourceRef:
