--- a/security/sops-kms-json/kustomization.yaml
+++ b/security/sops-kms-json/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: webapi6
-secretGenerator:
+configMapGenerator:
   - name: webapi6-config
     files:
-    - secrets/appsetting.json
+    - secrets/appsettings.json
     options:
       disableNameSuffixHash: true
