--- a/security/sops-kms-json/kustomization.yaml
+++ b/security/sops-kms-json/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: webapi6
-configMapGenerator:
+secretGenerator:
   - name: webapi6-config
     files:
     - secrets/appsetting.json
