--- a/security/sops-kms-json/kustomization.yaml
+++ b/security/sops-kms-json/kustomization.yaml
@@ -4,6 +4,6 @@ namespace: webapi6
 secretGenerator:
   - name: webapi6-config
     files:
-    - secrets/appsetting.json
+    - secrets/appsettings.json
     options:
       disableNameSuffixHash: true
