--- a/applications/app2/app2.yaml
+++ b/applications/app2/app2.yaml
@@ -27,9 +27,9 @@ metadata:
   # annotations:
   #   secret.reloader.stakater.com/reload: "prod-secrets"
 spec:
-  minReadySeconds: 3
-  revisionHistoryLimit: 5
-  progressDeadlineSeconds: 60
+  # minReadySeconds: 3
+  # revisionHistoryLimit: 5
+  # progressDeadlineSeconds: 60
   strategy:
     rollingUpdate:
       maxUnavailable: 0
@@ -44,20 +44,17 @@ spec:
     spec:
       containers:
       - name: webapi6
-        image: 290913681714.dkr.ecr.ap-southeast-1.amazonaws.com/gitops/testwebapi6:amd64
+        image: 290913681714.dkr.ecr.ap-southeast-1.amazonaws.com/gitops/testwebapi6:amd64-local
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
           containerPort: 80
           protocol: TCP
-        # command:
-        # - ./webapi6
-        # env:
-        # # - name: webapi6_UI_COLOR
-        # #  value: "#34577c"
         volumeMounts:
-          - name: appsetting
-            mountPath: "/app" 
+          - name: appsettings
+            mountPath: "/app/injector" 
+        command: [sh, -c]
+        args: ['cp -f /app/injector/appsettings.json /app && dotnet WebApi6.dll']
         resources:
           limits:
             cpu: 200m
@@ -66,6 +63,6 @@ spec:
             cpu: 10m
             memory: 16Mi
       volumes:
-        - name: appsetting
+        - name: appsettings
           secret:
             secretName: webapi6-config
