--- a/clusters/default/security/secretrepo.yaml
+++ b/clusters/default/security/secretrepo.yaml
@@ -8,5 +8,4 @@ spec:
   ref:
     branch: main
   timeout: 60s
-  url: >-
-    https://oauth2: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@github.com/anakhub/secretrepo
+  url: ssh://git@github.com/anakhub/secretrepo
