--- a/clusters/default/security/secretrepo.yaml
+++ b/clusters/default/security/secretrepo.yaml
@@ -4,6 +4,7 @@ metadata:
   name: secretrepo
   namespace: flux-system
 spec:
+  gitImplementation: go-git
   interval: 1m0s
   ref:
     branch: main
