--- a/clusters/default/security/secretrepo.yaml
+++ b/clusters/default/security/secretrepo.yaml
@@ -4,9 +4,10 @@ metadata:
   name: secretrepo
   namespace: flux-system
 spec:
-  gitImplementation: go-git
   interval: 1m0s
   ref:
     branch: main
+  secretRef:
+    name: flux-system
   timeout: 60s
   url: ssh://git@github.com/anakhub/secretrepo
