--- a/clusters/default/applications/app2/devrepo.yaml
+++ b/clusters/default/applications/app2/devrepo.yaml
@@ -8,6 +8,6 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: flux-system
+    name: gitops-dev-auth
   timeout: 60s
   url: ssh://git@github.com/anakhub/gitops-dev-repo
