--- a/clusters/default/security/secretrepo.yaml
+++ b/clusters/default/security/secretrepo.yaml
@@ -8,6 +8,6 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: flux-system
+    name: gitops-secret-auth
   timeout: 60s
   url: ssh://git@github.com/anakhub/secretrepo
