--- a/clusters/default/applications/app2/sync.yaml
+++ b/clusters/default/applications/app2/sync.yaml
@@ -7,6 +7,7 @@ spec:
   interval: 1m0s
   path: ./applications/app2
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: devrepo
