fix patch deploymant

--- a/clusters/default/applications/app2/sync.yaml
+++ b/clusters/default/applications/app2/sync.yaml
@@ -4,6 +4,7 @@ metadata:
   name: webapi6
   namespace: flux-system
 spec:
+  targetNamespace: webapi6
   interval: 1m0s
   path: ./applications/app2
   prune: true
