--- a/clusters/default/applications/app2/kustomization.yaml
+++ b/clusters/default/applications/app2/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- devrepo.yaml
+# - devrepo.yaml
 - sync.yaml
 - app2.yaml
 patches:
