--- a/clusters/default/applications/app2/kustomization.yaml
+++ b/clusters/default/applications/app2/kustomization.yaml
@@ -1,20 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- devrepo.yaml
-- sync.yaml
+  - devrepo.yaml
+  - sync.yaml
 # - app2.yaml
 patches:
-      - patch: |
-          apiVersion: apps/v1
-          kind: Deployment
-          metadata:
-            name: webapi6
-            annotations:
-              secret.reloader.stakater.com/reload: "webapi6-config2"
-        target:
-          kind: Deployment
-          name: webapi6
+  - patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: webapi6
+        namespace: webapi6
+        annotations:
+          secret.reloader.stakater.com/reload: "webapi6-config"
+    target:
+      kind: Deployment
+      name: webapi6
+      namespace: webapi6
+
 # images:
 #   - name: 290913681714.dkr.ecr.ap-southeast-1.amazonaws.com/gitops/testwebapi6:amd64
 #     newName: docker.io
