--- a/clusters/default/applications/app2/kustomization.yaml
+++ b/clusters/default/applications/app2/kustomization.yaml
@@ -4,19 +4,22 @@ resources:
   - devrepo.yaml
   - sync.yaml
 # - app2.yaml
-patches:
-  - patch: |
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: webapi6
-        namespace: webapi6
-        annotations:
-          secret.reloader.stakater.com/reload: "webapi6-config"
-    target:
-      kind: Deployment
-      name: webapi6
-      namespace: webapi6
+# patches:
+#   - patch: |
+#       apiVersion: apps/v1
+#       kind: Deployment
+#       metadata:
+#         name: webapi6
+#         namespace: webapi6
+#         annotations:
+#           secret.reloader.stakater.com/reload: "webapi6-config"
+#     target:
+#       kind: Deployment
+#       name: webapi6
+#       namespace: webapi6
+
+patchesStrategicMerge:
+  - app2.yaml
 
 # images:
 #   - name: 290913681714.dkr.ecr.ap-southeast-1.amazonaws.com/gitops/testwebapi6:amd64
