--- a/clusters/default/applications/app2/kustomization.yaml
+++ b/clusters/default/applications/app2/kustomization.yaml
@@ -13,10 +13,10 @@ patches:
         namespace: webapi6
         annotations:
           secret.reloader.stakater.com/reload: "webapi6-config"
-#     target:
-#       kind: Deployment
-#       name: webapi6
-#       namespace: webapi6
+    target:
+      kind: Deployment
+      name: webapi6
+      namespace: webapi6
 
 # patchesStrategicMerge:
 #   - app2.yaml
