--- a/clusters/default/applications/app2/sync.yaml
+++ b/clusters/default/applications/app2/sync.yaml
@@ -13,3 +13,20 @@ spec:
   sourceRef:
     kind: GitRepository
     name: devrepo
+  patches:
+  - patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: webapi6
+        namespace: webapi6
+        annotations:
+          secret.reloader.stakater.com/reload: "webapi6-config"
+    target:
+      kind: Deployment
+      name: webapi6
+      namespace: webapi6
+  images:
+  - name: 290913681714.dkr.ecr.ap-southeast-1.amazonaws.com/gitops/testwebapi6:amd64
+    newName: docker.io
+    newTag: prod-2
