--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: example
+  namespace: external-secrets
 spec:
 
   # Used to select the correct ESO controller (think: ingress.ingressClassName)
