--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -35,9 +35,9 @@ spec:
       # getting the accessKeyID and secretAccessKey from an already created Kubernetes Secret
       auth:
         secretRef:
-          accessKeyID:
+          accessKeyIDSecretRef:
             name: awssm-secret
             key: access-key
-          secretAccessKey:
+          secretAccessKeySecretRef:
             name: awssm-secret
             key: secret-access-key
