--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
-  name: example
+  name: example-store
   namespace: external-secrets
 spec:
 
