--- a/platform/external-secrets/secret.yaml
+++ b/platform/external-secrets/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: example
+  namespace: external-secrets
 spec:
   refreshInterval: 1h
   secretStoreRef:
