--- a/platform/external-secrets/secret.yaml
+++ b/platform/external-secrets/secret.yaml
@@ -9,10 +9,10 @@ spec:
     name: example-store
     kind: SecretStore
   target:
-    name: secret-to-be-created
+    name: prod-test-secret
     creationPolicy: Owner
   data:
-  - secretKey: prod-test
+  - secretKey: key1
     remoteRef:
-      key: key1
+      key: prod-test
       property: key1
