--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -9,15 +9,15 @@ spec:
   # The ESO controller is instantiated with a specific controller name
   # and filters ES based on this property
   # Optional
-  controller: dev
+  # controller: dev
 
-  # You can specify retry settings for the http connection
-  # these fields allow you to set a maxRetries before failure, and
-  # an interval between the retries.
-  # Current supported providers: AWS, IBM
-  retrySettings:
-    maxRetries: 5
-    retryInterval: "10s"
+  # # You can specify retry settings for the http connection
+  # # these fields allow you to set a maxRetries before failure, and
+  # # an interval between the retries.
+  # # Current supported providers: AWS, IBM
+  # retrySettings:
+  #   maxRetries: 5
+  #   retryInterval: "10s"
 
   # provider field contains the configuration to access the provider
   # which contains the secret exactly one provider must be configured.
@@ -28,7 +28,7 @@ spec:
     aws:
       service: SecretsManager
       # Role is a Role ARN which the SecretManager provider will assume
-      role: arn:aws:iam::290913681714:user/external-secrets
+      # role: arn:aws:iam::290913681714:user/external-secrets
       # AWS Region to be used for the provider
       region: ap-southeast-1
       # Auth defines the information necessary to authenticate against AWS by
