--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -40,3 +40,7 @@ spec:
           secretAccessKey:
             name: awssm-secret
             key: secret-access-key
+        jwt:
+          serviceAccountRef:
+            name: kustomize-controller
+            namespace: flux-system
