--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -2,7 +2,6 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: example-store
-  namespace: external-secrets
 spec:
 
   # Used to select the correct ESO controller (think: ingress.ingressClassName)
@@ -37,11 +36,13 @@ spec:
         secretRef:
           accessKeyIDSecretRef:
             name: awssm-secret
+            namespace: external-secrets
             key: access-key
           secretAccessKeySecretRef:
             name: awssm-secret
+            namespace: external-secrets
             key: secret-access-key
-        jwt:
-          serviceAccountRef:
-            name: kustomize-controller
-            namespace: flux-system
+        # jwt:
+        #   serviceAccountRef:
+        #     name: kustomize-controller
+        #     namespace: flux-system
