--- a/platform/external-secrets/secret.yaml
+++ b/platform/external-secrets/secret.yaml
@@ -7,7 +7,7 @@ spec:
   refreshInterval: 1h
   secretStoreRef:
     name: example-store
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: prod-test-secret
     creationPolicy: Owner
