--- a/platform/external-secrets/secret.yaml
+++ b/platform/external-secrets/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example
   namespace: external-secrets
 spec:
-  refreshInterval: 1h
+  refreshInterval: 1m
   secretStoreRef:
     name: example-store
     kind: ClusterSecretStore
