--- a/platform/external-secrets/external-secrets-helm.yaml
+++ b/platform/external-secrets/external-secrets-helm.yaml
@@ -33,3 +33,6 @@ spec:
     crds: Create
   upgrade:
     crds: CreateReplace
+  values:
+    serviceAccount:
+      annotations: {eks.amazonaws.com/role-arn: "arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-external-secrets"}
