--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -7,6 +7,7 @@ spec:
     aws:
       service: SecretsManager
       region: ap-southeast-1
+      role: arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-external-secrets
       auth:
         secretRef:
           accessKeyIDSecretRef:
