--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -7,7 +7,8 @@ spec:
     aws:
       service: SecretsManager
       region: ap-southeast-1
-      role: arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-external-secrets
+      role: external-secrets
+      namespace: external-secrets
       auth:
         secretRef:
           accessKeyIDSecretRef:
