fix kms external-secrets

--- a/platform/external-secrets/secretstore.yaml
+++ b/platform/external-secrets/secretstore.yaml
@@ -7,8 +7,7 @@ spec:
     aws:
       service: SecretsManager
       region: ap-southeast-1
-      role: external-secrets
-      namespace: external-secrets
+      role: arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-Role1-FHUQXFHQGVAZ
       auth:
         secretRef:
           accessKeyIDSecretRef:
