--- a/clusters/default/flux-system/kustomization.yaml
+++ b/clusters/default/flux-system/kustomization.yaml
@@ -14,3 +14,13 @@ patches:
         target:
             kind: ServiceAccount
             name: kustomize-controller
+      - patch: |
+          apiVersion: v1
+          kind: ServiceAccount
+          metadata:
+            name: helm-controller
+            annotations:
+              eks.amazonaws.com/role-arn: "arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-external-secrets"
+        target:
+            kind: ServiceAccount
+            name: helm-controller
