--- a/platform/external-secrets/secret.yaml
+++ b/platform/external-secrets/secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example
   namespace: external-secrets
 spec:
+  role: arn:aws:iam::290913681714:role/eksctl-devops82-addon-iamserviceaccount-flux-external-secrets
   refreshInterval: 1m
   secretStoreRef:
     name: example-store
